--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <span id="one-tile-area"></span>
-              
+
             </div>
         </div>
         <div>
@@ -45,16 +45,16 @@
                 <input type="number" id="tile-area">
                 <span>m²</span>
             </label>
-            <label for="tile-numerosity">
+            <label for="tile-num">
                 <h3>Нужное количество плитки</h3>
-                <input type="number" id="tile-numerosity">
+                <input type="number" id="tile-num">
                 <span>штук</span>
             </label>
         </div>
         <div>
             <label for="">
                 <h3>Количество в одной пачке</h3>
-                <input type="number" id="">
+                <input type="number" id="numerosity">
                 <span>шт</span>
             </label>
             <label for="">
