--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Area calculation</h1>
-    <section>
+    <section class="change-section">
         <h2>Выберите нужное</h2>
         <select name="type" id="type">
             <option id="value-tile" value="tile">Плитка</option>
@@ -19,24 +19,21 @@
             <option id="value-roll" value="roll">Рулонные покрытия</option>
         </select>
     </section>
-    <section>
+    <section class="tile-section">
         <div>
             <h3>Введите размеры</h3>
             <div>
                 <label for="tile-width">
-                    Ширина (см)
-                    <input type="number" id="tile-width">
+                    <input type="number" id="tile-width" placeholder="Ширина (см)">
                 </label>
             </div>
             <div>
                 <label for="tile-height">
-                    Высота (см)
-                    <input type="number" id="tile-height">
+                    <input type="number" id="tile-height" placeholder="Высота (см)">
                 </label>
             </div>
             <div>
                 <span id="one-tile-area"></span>
-
             </div>
         </div>
         <div>
@@ -54,12 +51,12 @@
         <div>
             <label for="">
                 <h3>Количество в одной пачке</h3>
-                <input type="number" id="numerosity">
+                <input type="number" id="num-in-box">
                 <span>шт</span>
             </label>
             <label for="">
                 <h3>Нужно пачек</h3>
-                <input type="number">
+                <input type="number" id="num-box">
                 <span>шт</span>
             </label>
         </div>
