--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area calculation</title>
-    <link rel="stylesheet" href="../Area-calculation/css/normalize.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <h1>Area calculation</h1>
+    <h1 class="title">Area calculation</h1>
     <section class="change-section">
         <h2>Выберите нужное</h2>
         <select name="type" id="type">
@@ -27,7 +27,7 @@
                 <label for="tile-width">
                     <button class="number-minus" type="button"
                         onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                    <input min="0" type="number" id="tile-width" placeholder="Ширина (см)">
+                    <input min="0" type="number" id="tile-width" placeholder="Ширина (см)" step="5">
                     <button class="number-plus" type="button"
                         onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 </label>
@@ -36,7 +36,7 @@
                 <label for="tile-height">
                     <button class="number-minus" type="button"
                         onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                    <input min="0" type="number" id="tile-height" placeholder="Высота (см)">
+                    <input min="0" type="number" id="tile-height" placeholder="Высота (см)" step="5">
                     <button class="number-plus" type="button"
                         onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 </label>
@@ -66,7 +66,7 @@
             </label>
         </div>
         <div>
-            <label for="">
+            <label for="num-in-box">
                 <h3>Количество в одной пачке</h3>
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
@@ -75,14 +75,23 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
             </label>
-            <label for="">
+            <label for="num-box">
                 <h3>Нужно пачек</h3>
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
                 <input min="0" type="number" id="num-box">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
-                <span>шт</span>
+                <span>пачек</span>
+            </label>
+            <label for="boxes-plus">
+                <h3>и плиток</h3>
+                <button class="number-minus" type="button"
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                <input min="0" type="number" id="boxes-plus">
+                <button class="number-plus" type="button"
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                <span>плиток</span>
             </label>
         </div>
         <input type="submit" onclick="calcArea()">
