--- a/index.html
+++ b/index.html
@@ -14,90 +14,88 @@
     <h1 class="title">Area calculation</h1>
     <section class="change-section">
         <h2>Выберите нужное</h2>
-        <select name="type" id="type">
-            <option id="value-tile" value="tile">Плитка</option>
-            <option id="value-laminate" value="laminate">Ламинат</option>
-            <option id="value-roll" value="roll">Рулонные покрытия</option>
-        </select>
+        <label for="tile"><input class="radio__tile" type="radio" name="type" value="tile" id="tile">Плитка</label>
+        <label for="laminate"><input type="radio" value="laminate" name="type" id="laminate">Ламинат</label>
+        <label for="roll"><input type="radio" value="roll" name="type" id="roll">Рулонные покрытия</label>
     </section>
-    <section class="tile-section">
-        <div class="tile-dimensions">
-            <h3>Введите размеры</h3>
-
-            <label for="tile-width">
+    <section class="tile">
+        <h3>Введите размеры плитки</h3>
+        <div class="tile__dimensions">
+            <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input min="0" type="number" id="tile-width" placeholder="Ширина (см)" step="5" tabindex="1">
+                <input onclick="this.select();" value="10" min="0" type="number" id="tile-width" placeholder="Ширина"
+                    step="5" tabindex="1">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
-            </label>
-            <!-- <span>x</span> -->
-            <label for="tile-height">
-                <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input min="0" type="number" id="tile-height" placeholder="Высота (см)" step="5" tabindex="2">
-                <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
-            </label>
-
-            <div>
-                <span id="one-tile-area"></span>
+                <span>см</span>
             </div>
-        </div>
-        <div>
-            <h3>Введите нужную площадь</h3>
-            <label for="tile-area">
+            <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input min="0" type="number" id="tile-area" tabindex="3">
+                <input onclick="this.select();" value="20" min="0" type="number" id="tile-height" placeholder="Высота"
+                    step="5" tabindex="2">
+                <button class="number-plus" type="button"
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                <span>см</span>
+            </div>
+            <span id="one-tile-area">Площадь одной плитки 0.02 м²</span>
+
+        </div>
+        <h3>Введите нужную площадь</h3>
+        <div class="tile__square">
+            <div class="input-block">
+                <button class="number-minus" type="button"
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                <input onclick="this.select();" value="10" min="0" type="number" id="tile-area" tabindex="3">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>m²</span>
-            </label>
+            </div>
         </div>
-        <div>
-            <h3>Нужное количество плитки</h3>
-            <label for="tile-num">
+        <h3>Нужное количество плитки</h3>
+        <div class="tile__amount">
+            <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input min="0" type="number" id="tile-num" tabindex="4">
-                <button class="number-plus" type="button"
-                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
-                <span>штук</span>
-            </label>
-        </div>
-        <div>
-            <h3>Количество в одной пачке</h3>
-            <label for="num-in-box">
-                <button class="number-minus" type="button"
-                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input min="0" type="number" id="num-in-box" tabindex="5">
+                <input onclick="this.select();" value="500" min="0" type="number" id="tile-num" tabindex="4">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
-            </label>
+            </div>
         </div>
-        <div>
-            <h3>Нужно пачек</h3>
-            <label for="num-box">
+        <h3>Количество в одной пачке</h3>
+        <div class="tile__num-in-box">
+            <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input min="0" type="number" id="num-box" tabindex="6">
+                <input onclick="this.select();" value="7" min="0" type="number" id="num-in-box" tabindex="5">
+                <button class="number-plus" type="button"
+                    onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
+                <span>шт</span>
+            </div>
+        </div>
+        <h3>Нужно пачек</h3>
+        <div class="tile__num-boxes">
+            <div class="input-block">
+                <button class="number-minus" type="button"
+                    onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
+                <input onclick="this.select();" value="71" min="0" type="number" id="num-box" tabindex="6">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>пачек</span>
-            </label>
+            </div>
         </div>
-        <div>
-            <h3>и плиток</h3>
-            <label for="boxes-plus">
+        <h3>и плиток</h3>
+        <div class="tile__boxes-plus">
+            <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input type="number" id="boxes-plus" tabindex="7">
+                <input onclick="this.select();" value="3" type="number" id="boxes-plus" tabindex="7">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>плиток</span>
-            </label>
+            </div>
         </div>
         <!-- <input type="submit" onclick="calcArea()"> -->
     </section>
