--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
     <h1 class="title">Area calculation</h1>
-    <section class="change-section">
+    <!-- <section class="change-section">
         <h2>Выберите нужное</h2>
         <label for="tile"><input checked class="radio__tile" type="radio" name="type" value="tile"
                 id="tile">Плитка</label>
         <label for="laminate"><input type="radio" value="laminate" name="type" id="laminate">Ламинат</label>
         <label for="roll"><input type="radio" value="roll" name="type" id="roll">Рулонные покрытия</label>
-    </section>
+    </section> -->
     <section class="tile active">
         <h3>Введите размеры плитки</h3>
         <div class="tile__dimensions">
