--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area calculation</title>
+    <link rel="shortcut icon" href="favicon.svg">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -100,7 +101,9 @@
         </div>
         <!-- <input type="submit" onclick="calcArea()"> -->
     </section>
-    <script src="../js/script.js"></script>
+    <script src="../js/script.js">
+
+    </script>
 </body>
 
 </html>
