--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="10" min="0" type="number" id="tile-width" placeholder="Ширина"
-                    step="5" tabindex="1">
+                <input value="10" min="0" type="number" id="tile-width" placeholder="Ширина" step="5" tabindex="1">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>см</span>
@@ -57,8 +56,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="20" min="0" type="number" id="tile-height" placeholder="Высота"
-                    step="5" tabindex="2">
+                <input value="20" min="0" type="number" id="tile-height" placeholder="Высота" step="5" tabindex="2">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>см</span>
@@ -71,7 +69,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="10" min="0" type="number" id="tile-area" tabindex="3">
+                <input value="10" min="0" type="number" id="tile-area" tabindex="3">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>m²</span>
@@ -82,7 +80,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="500" min="0" type="number" id="tile-num" tabindex="4">
+                <input value="500" min="0" type="number" id="tile-num" tabindex="4">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
@@ -93,7 +91,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="7" min="0" type="number" id="num-in-box" tabindex="5">
+                <input value="7" min="0" type="number" id="num-in-box" tabindex="5">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
@@ -104,7 +102,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="71" min="0" type="number" id="num-box" tabindex="6">
+                <input value="71" min="0" type="number" id="num-box" tabindex="6">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>пачек</span>
@@ -115,7 +113,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input onclick="this.select();" value="3" type="number" id="boxes-plus" tabindex="7">
+                <input value="3" type="number" id="boxes-plus" tabindex="7">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>плиток</span>
