--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>см</span>
             </div>
-            <span id="one-tile-area">Площадь одной плитки 0.02 м²</span>
-
+            <span id="one-tile-area" class="subtext">Площадь одной плитки 0.02 м²</span>
         </div>
         <h3>Введите нужную площадь</h3>
         <div class="tile__square">
@@ -85,6 +84,7 @@
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
             </div>
+            <span></span>
         </div>
         <h3>Количество в одной пачке</h3>
         <div class="tile__num-in-box">
