--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <input value="71" min="0" type="number" id="num-box" tabindex="6">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
-                <span>пачек</span>
+                <span>шт</span>
             </div>
         </div>
         <h3>и плиток</h3>
@@ -117,7 +117,7 @@
                 <input value="3" type="number" id="boxes-plus" tabindex="7">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
-                <span>плиток</span>
+                <span>шт</span>
             </div>
         </div>
         <!-- <input type="submit" onclick="calcArea()"> -->
