--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input value="10" min="0" type="number" id="tile-area" tabindex="3">
+                <input value="10" min="0" type="number" id="tile-area" tabindex="3"
+                    placeholder="Введите нужную площадь">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>m²</span>
@@ -79,7 +80,8 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input value="500" min="0" type="number" id="tile-num" tabindex="4">
+                <input value="500" min="0" type="number" id="tile-num" tabindex="4"
+                    placeholder="Нужное количество плитки">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
@@ -91,7 +93,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input value="7" min="0" type="number" id="num-in-box" tabindex="5">
+                <input value="7" min="0" type="number" id="num-in-box" tabindex="5" placeholder="Плиток в пачке">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
@@ -103,7 +105,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input value="71" min="0" type="number" id="num-box" tabindex="6">
+                <input value="71" min="0" type="number" id="num-box" tabindex="6" placeholder="Нужно коробок">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
@@ -114,7 +116,7 @@
             <div class="input-block">
                 <button class="number-minus" type="button"
                     onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">-</button>
-                <input value="3" type="number" id="boxes-plus" tabindex="7">
+                <input value="3" type="number" id="boxes-plus" tabindex="7" placeholder="И плиток">
                 <button class="number-plus" type="button"
                     onclick="this.previousElementSibling.stepUp(); this.previousElementSibling.onchange();">+</button>
                 <span>шт</span>
