--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Primary Meta Tags -->
-<title>Area calculation</title>
-<meta name="title" content="Area calculation">
-<meta name="description" content="Посчитай площадь удобно">
+    <!-- Primary Meta Tags -->
+    <title>Area calculation</title>
+    <meta name="title" content="Area calculation">
+    <meta name="description" content="Посчитай площадь удобно">
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://area-calculation.netlify.app/index.html">
-<meta property="og:title" content="Area calculation">
-<meta property="og:description" content="Посчитай площадь удобно">
-<meta property="og:image" content="">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://area-calculation.netlify.app/index.html">
+    <meta property="og:title" content="Area calculation">
+    <meta property="og:description" content="Посчитай площадь удобно">
+    <meta property="og:image" content="">
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://area-calculation.netlify.app/index.html">
-<meta property="twitter:title" content="Area calculation">
-<meta property="twitter:description" content="Посчитай площадь удобно">
-<meta property="twitter:image" content="">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://area-calculation.netlify.app/index.html">
+    <meta property="twitter:title" content="Area calculation">
+    <meta property="twitter:description" content="Посчитай площадь удобно">
+    <meta property="twitter:image" content="">
     <title>Area calculation</title>
     <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
@@ -47,20 +47,20 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#1a6872">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="title">
         <h1>Area calculation</h1>
     </div>
-
+    <!-- 
     <nav class="nav__menu">
         <div>Плитка</div>
         <div>Ламинат</div>
         <div>Рулонные покрытия</div>
-    </nav>
+    </nav> -->
     <section class="tile active">
         <h2>Введите размеры плитки</h2>
         <div class="tile__dimensions padding">
