--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <!-- <input type="submit" onclick="calcArea()"> -->
     </section>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
